sort of fix styles on mobile @

--- a/src/components/HeroSection/HeroSection.scss
+++ b/src/components/HeroSection/HeroSection.scss
@@ -29,8 +29,7 @@
   padding-top: 0;
 }
 
-
-.sub-title-container { 
+.sub-title-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -60,11 +59,15 @@
     background: transparent;
     transition: width 0.8s ease, background-color 0.5s ease;
   }
-  h2 { 
+  h2 {
     margin-bottom: 2.5rem;
   }
 }
 
+.para-home-container {
+  display: flex;
+  flex-direction: column;
+}
 
 .heading {
   margin-bottom: 24px;
@@ -245,7 +248,6 @@ img {
   font-size: 20px;
   line-height: 1.3;
   text-align: center;
-
 }
 
 .showcase-skills {
@@ -372,6 +374,16 @@ img {
   }
 }
 
+@media screen and (max-width: 890px) {
+  .paragraph {
+    width: 100%;
+  }
+
+  .paragraph-2 {
+    width: 100%;
+  }
+}
+
 @media screen and(max-width: 850px) {
   .top-line {
     width: 100%;
@@ -381,11 +393,11 @@ img {
   }
 
   .paragraph {
-    width: 150%;
+    width: 100%;
   }
 
   .paragraph-2 {
-    width: 150%;
+    width: 100%;
   }
 }
 
@@ -465,11 +477,18 @@ img {
     max-width: 55%;
   }
   .paragraph {
-    width: 90%;
+    width: 150%;
+    text-align: left;
+    margin-right: 2rem;
+    // margin-left: 2rem;
   }
 
   .paragraph-2 {
-    width: 90%;
+    width: 150%;
+    text-align: left;
+    margin-right: 2rem;
+
+    // margin-left: 2rem;
   }
   .skill {
     display: flex;
@@ -490,6 +509,10 @@ img {
   }
   .skill-body {
     width: 75%;
+  }
+  .top-line-home {
+    text-align: center;
+    margin-left: 1.2rem;
   }
 }
 
@@ -523,15 +546,15 @@ img {
     min-width: 20px;
   }
 
-  .paragraph {
-    font-size: 18px;
-    word-wrap: wrap;
-    width: 300%;
-  }
+  // .paragraph {
+  //   font-size: 18px;
+  //   word-wrap: wrap;
+  //   width: -10%;
+  // }
 
-  .paragraph-2 {
-    width: 300%;
-  }
+  // .paragraph-2 {
+  //   width: 300%;
+  // }
 
   .top-line {
     width: 140%;
